--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,16 @@
 {
   "plugins": [
     "testing-library",
-    "jest-dom"
+    "jest-dom",
+    "prettier"
   ],
     "extends": [
       "react-app",
       "react-app/jest",
       "plugin:testing-library/react",
       "plugin:jest-dom/recommended"
-    ]
+    ],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
