--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.29.0",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-testing-library": "^5.9.1"
+    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1"
   }
 }
